// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Treasure should hide icon 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Treasure
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
    hasDismiss={false}
    hasHiddenIcons={true}
    isActive={false}
    isPressed={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Treasure should render when active and not pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Treasure
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
    hasDismiss={false}
    hasHiddenIcons={false}
    isActive={true}
    isPressed={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Circle
          cx="444"
          cy="62"
          fill="#FFFFFF"
          fillOpacity="0.5"
          r="60"
        />,
        <Rect
          fill="#FFFFFF"
          height="8"
          rx={0}
          ry={0}
          transform="matrix(0.8651 -0.5015 0.5015 0.8651 34.5754 211.3933)"
          width="3"
          x="408.9"
          y="37.4"
        />,
        <Rect
          fill="#FFFFFF"
          height="7.5"
          rx={0}
          ry={0}
          transform="matrix(0.3987 -0.9171 0.9171 0.3987 196.2158 398.2996)"
          width="3"
          x="400.3"
          y="45.8"
        />,
        <Rect
          fill="#FFFFFF"
          height="3"
          rx={0}
          ry={0}
          width="8"
          x="394.6"
          y="60.2"
        />,
        <Path
          d="M483.4,36.3c-1.9-3.3-4.9-5.6-8.5-6.6c-1.7-0.5-3.5-0.6-5.3-0.4H431c-2.4,0.1-4.6,0.8-6.6,1.9l-7.8,4.6l11.9,20.6h-2.3 h-16.5v37h39.5h2h21V59l6.2-3.5C485,51.5,487.3,42.9,483.4,36.3z M426,33.8c1.5-0.9,3.3-1.4,5.1-1.5h31.2l-4.2,2.5h-33.8L426,33.8z M429.1,59.4h5v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V59.4z M412.6,90.4v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5 v-2.5h12v31H412.6z M449.1,56.4h-12h-5l-10.8-18.6h36.3l10.9,18.6h-17.4H449.1z M469.1,90.4h-17v-31h17V90.4z M482,46.1 c-0.8,2.8-2.6,5.2-5.2,6.7l-5.2,3l-11-19l5.3-3.1c1.4-0.8,3-1.3,4.5-1.4h0.8l0,0c3.8,0,7.6,1.9,9.7,5.5 C482.4,40.3,482.8,43.3,482,46.1z"
          fill="#FFFFFF"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": "444",
          "cy": "62",
          "fill": "#FFFFFF",
          "fillOpacity": "0.5",
          "r": "60",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#FFFFFF",
          "height": "8",
          "rx": 0,
          "ry": 0,
          "transform": "matrix(0.8651 -0.5015 0.5015 0.8651 34.5754 211.3933)",
          "width": "3",
          "x": "408.9",
          "y": "37.4",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#FFFFFF",
          "height": "7.5",
          "rx": 0,
          "ry": 0,
          "transform": "matrix(0.3987 -0.9171 0.9171 0.3987 196.2158 398.2996)",
          "width": "3",
          "x": "400.3",
          "y": "45.8",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#FFFFFF",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": "8",
          "x": "394.6",
          "y": "60.2",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M483.4,36.3c-1.9-3.3-4.9-5.6-8.5-6.6c-1.7-0.5-3.5-0.6-5.3-0.4H431c-2.4,0.1-4.6,0.8-6.6,1.9l-7.8,4.6l11.9,20.6h-2.3 h-16.5v37h39.5h2h21V59l6.2-3.5C485,51.5,487.3,42.9,483.4,36.3z M426,33.8c1.5-0.9,3.3-1.4,5.1-1.5h31.2l-4.2,2.5h-33.8L426,33.8z M429.1,59.4h5v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V59.4z M412.6,90.4v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5 v-2.5h12v31H412.6z M449.1,56.4h-12h-5l-10.8-18.6h36.3l10.9,18.6h-17.4H449.1z M469.1,90.4h-17v-31h17V90.4z M482,46.1 c-0.8,2.8-2.6,5.2-5.2,6.7l-5.2,3l-11-19l5.3-3.1c1.4-0.8,3-1.3,4.5-1.4h0.8l0,0c3.8,0,7.6,1.9,9.7,5.5 C482.4,40.3,482.8,43.3,482,46.1z",
          "fill": "#FFFFFF",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Circle
            cx="444"
            cy="62"
            fill="#FFFFFF"
            fillOpacity="0.5"
            r="60"
          />,
          <Rect
            fill="#FFFFFF"
            height="8"
            rx={0}
            ry={0}
            transform="matrix(0.8651 -0.5015 0.5015 0.8651 34.5754 211.3933)"
            width="3"
            x="408.9"
            y="37.4"
          />,
          <Rect
            fill="#FFFFFF"
            height="7.5"
            rx={0}
            ry={0}
            transform="matrix(0.3987 -0.9171 0.9171 0.3987 196.2158 398.2996)"
            width="3"
            x="400.3"
            y="45.8"
          />,
          <Rect
            fill="#FFFFFF"
            height="3"
            rx={0}
            ry={0}
            width="8"
            x="394.6"
            y="60.2"
          />,
          <Path
            d="M483.4,36.3c-1.9-3.3-4.9-5.6-8.5-6.6c-1.7-0.5-3.5-0.6-5.3-0.4H431c-2.4,0.1-4.6,0.8-6.6,1.9l-7.8,4.6l11.9,20.6h-2.3 h-16.5v37h39.5h2h21V59l6.2-3.5C485,51.5,487.3,42.9,483.4,36.3z M426,33.8c1.5-0.9,3.3-1.4,5.1-1.5h31.2l-4.2,2.5h-33.8L426,33.8z M429.1,59.4h5v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V59.4z M412.6,90.4v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5 v-2.5h12v31H412.6z M449.1,56.4h-12h-5l-10.8-18.6h36.3l10.9,18.6h-17.4H449.1z M469.1,90.4h-17v-31h17V90.4z M482,46.1 c-0.8,2.8-2.6,5.2-5.2,6.7l-5.2,3l-11-19l5.3-3.1c1.4-0.8,3-1.3,4.5-1.4h0.8l0,0c3.8,0,7.6,1.9,9.7,5.5 C482.4,40.3,482.8,43.3,482,46.1z"
            fill="#FFFFFF"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": "444",
            "cy": "62",
            "fill": "#FFFFFF",
            "fillOpacity": "0.5",
            "r": "60",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#FFFFFF",
            "height": "8",
            "rx": 0,
            "ry": 0,
            "transform": "matrix(0.8651 -0.5015 0.5015 0.8651 34.5754 211.3933)",
            "width": "3",
            "x": "408.9",
            "y": "37.4",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#FFFFFF",
            "height": "7.5",
            "rx": 0,
            "ry": 0,
            "transform": "matrix(0.3987 -0.9171 0.9171 0.3987 196.2158 398.2996)",
            "width": "3",
            "x": "400.3",
            "y": "45.8",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#FFFFFF",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": "8",
            "x": "394.6",
            "y": "60.2",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M483.4,36.3c-1.9-3.3-4.9-5.6-8.5-6.6c-1.7-0.5-3.5-0.6-5.3-0.4H431c-2.4,0.1-4.6,0.8-6.6,1.9l-7.8,4.6l11.9,20.6h-2.3 h-16.5v37h39.5h2h21V59l6.2-3.5C485,51.5,487.3,42.9,483.4,36.3z M426,33.8c1.5-0.9,3.3-1.4,5.1-1.5h31.2l-4.2,2.5h-33.8L426,33.8z M429.1,59.4h5v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V59.4z M412.6,90.4v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5 v-2.5h12v31H412.6z M449.1,56.4h-12h-5l-10.8-18.6h36.3l10.9,18.6h-17.4H449.1z M469.1,90.4h-17v-31h17V90.4z M482,46.1 c-0.8,2.8-2.6,5.2-5.2,6.7l-5.2,3l-11-19l5.3-3.1c1.4-0.8,3-1.3,4.5-1.4h0.8l0,0c3.8,0,7.6,1.9,9.7,5.5 C482.4,40.3,482.8,43.3,482,46.1z",
            "fill": "#FFFFFF",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Treasure should render when inactive and not pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Treasure
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
    hasDismiss={false}
    hasHiddenIcons={false}
    isActive={false}
    isPressed={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Rect
          fill="#DDDDDD"
          height="8"
          rx={0}
          ry={0}
          transform="matrix(0.8651 -0.5015 0.5015 0.8651 22.0488 214.7955)"
          width="3"
          x="408.9"
          y="62.4"
        />,
        <Rect
          fill="#DDDDDD"
          height="7.5"
          rx={0}
          ry={0}
          transform="matrix(0.3987 -0.9171 0.9171 0.3987 173.3256 413.3168)"
          width="3"
          x="400.3"
          y="70.7"
        />,
        <Rect
          fill="#DDDDDD"
          height="3"
          rx={0}
          ry={0}
          width="8"
          x="394.6"
          y="85.2"
        />,
        <Path
          d="M483.4,61.3c-1.9-3.3-4.9-5.6-8.5-6.6c-1.7-0.5-3.5-0.6-5.3-0.4H431c-2.4,0.1-4.6,0.8-6.6,1.9l-7.8,4.6l11.9,20.6h-2.3 h-16.5v37h39.5h2h21V84l6.2-3.5C485,76.5,487.3,67.9,483.4,61.3z M426,58.8c1.5-0.9,3.3-1.4,5.1-1.5h31.2l-4.2,2.5h-33.8L426,58.8z M429.1,84.4h5v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V84.4z M412.6,115.4v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5 v-2.5h12v31H412.6z M449.1,81.4h-12h-5l-10.8-18.6h36.3l10.9,18.6h-17.4H449.1z M469.1,115.4h-17v-31h17V115.4z M482,71.1 c-0.8,2.8-2.6,5.2-5.2,6.7l-5.2,3l-11-19l5.3-3.1c1.4-0.8,3-1.3,4.5-1.4h0.8l0,0c3.8,0,7.6,1.9,9.7,5.5 C482.4,65.3,482.8,68.3,482,71.1z"
          fill="#DDDDDD"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "8",
          "rx": 0,
          "ry": 0,
          "transform": "matrix(0.8651 -0.5015 0.5015 0.8651 22.0488 214.7955)",
          "width": "3",
          "x": "408.9",
          "y": "62.4",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "7.5",
          "rx": 0,
          "ry": 0,
          "transform": "matrix(0.3987 -0.9171 0.9171 0.3987 173.3256 413.3168)",
          "width": "3",
          "x": "400.3",
          "y": "70.7",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": "8",
          "x": "394.6",
          "y": "85.2",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M483.4,61.3c-1.9-3.3-4.9-5.6-8.5-6.6c-1.7-0.5-3.5-0.6-5.3-0.4H431c-2.4,0.1-4.6,0.8-6.6,1.9l-7.8,4.6l11.9,20.6h-2.3 h-16.5v37h39.5h2h21V84l6.2-3.5C485,76.5,487.3,67.9,483.4,61.3z M426,58.8c1.5-0.9,3.3-1.4,5.1-1.5h31.2l-4.2,2.5h-33.8L426,58.8z M429.1,84.4h5v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V84.4z M412.6,115.4v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5 v-2.5h12v31H412.6z M449.1,81.4h-12h-5l-10.8-18.6h36.3l10.9,18.6h-17.4H449.1z M469.1,115.4h-17v-31h17V115.4z M482,71.1 c-0.8,2.8-2.6,5.2-5.2,6.7l-5.2,3l-11-19l5.3-3.1c1.4-0.8,3-1.3,4.5-1.4h0.8l0,0c3.8,0,7.6,1.9,9.7,5.5 C482.4,65.3,482.8,68.3,482,71.1z",
          "fill": "#DDDDDD",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Rect
            fill="#DDDDDD"
            height="8"
            rx={0}
            ry={0}
            transform="matrix(0.8651 -0.5015 0.5015 0.8651 22.0488 214.7955)"
            width="3"
            x="408.9"
            y="62.4"
          />,
          <Rect
            fill="#DDDDDD"
            height="7.5"
            rx={0}
            ry={0}
            transform="matrix(0.3987 -0.9171 0.9171 0.3987 173.3256 413.3168)"
            width="3"
            x="400.3"
            y="70.7"
          />,
          <Rect
            fill="#DDDDDD"
            height="3"
            rx={0}
            ry={0}
            width="8"
            x="394.6"
            y="85.2"
          />,
          <Path
            d="M483.4,61.3c-1.9-3.3-4.9-5.6-8.5-6.6c-1.7-0.5-3.5-0.6-5.3-0.4H431c-2.4,0.1-4.6,0.8-6.6,1.9l-7.8,4.6l11.9,20.6h-2.3 h-16.5v37h39.5h2h21V84l6.2-3.5C485,76.5,487.3,67.9,483.4,61.3z M426,58.8c1.5-0.9,3.3-1.4,5.1-1.5h31.2l-4.2,2.5h-33.8L426,58.8z M429.1,84.4h5v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V84.4z M412.6,115.4v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5 v-2.5h12v31H412.6z M449.1,81.4h-12h-5l-10.8-18.6h36.3l10.9,18.6h-17.4H449.1z M469.1,115.4h-17v-31h17V115.4z M482,71.1 c-0.8,2.8-2.6,5.2-5.2,6.7l-5.2,3l-11-19l5.3-3.1c1.4-0.8,3-1.3,4.5-1.4h0.8l0,0c3.8,0,7.6,1.9,9.7,5.5 C482.4,65.3,482.8,68.3,482,71.1z"
            fill="#DDDDDD"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "8",
            "rx": 0,
            "ry": 0,
            "transform": "matrix(0.8651 -0.5015 0.5015 0.8651 22.0488 214.7955)",
            "width": "3",
            "x": "408.9",
            "y": "62.4",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "7.5",
            "rx": 0,
            "ry": 0,
            "transform": "matrix(0.3987 -0.9171 0.9171 0.3987 173.3256 413.3168)",
            "width": "3",
            "x": "400.3",
            "y": "70.7",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": "8",
            "x": "394.6",
            "y": "85.2",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M483.4,61.3c-1.9-3.3-4.9-5.6-8.5-6.6c-1.7-0.5-3.5-0.6-5.3-0.4H431c-2.4,0.1-4.6,0.8-6.6,1.9l-7.8,4.6l11.9,20.6h-2.3 h-16.5v37h39.5h2h21V84l6.2-3.5C485,76.5,487.3,67.9,483.4,61.3z M426,58.8c1.5-0.9,3.3-1.4,5.1-1.5h31.2l-4.2,2.5h-33.8L426,58.8z M429.1,84.4h5v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V84.4z M412.6,115.4v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5 v-2.5h12v31H412.6z M449.1,81.4h-12h-5l-10.8-18.6h36.3l10.9,18.6h-17.4H449.1z M469.1,115.4h-17v-31h17V115.4z M482,71.1 c-0.8,2.8-2.6,5.2-5.2,6.7l-5.2,3l-11-19l5.3-3.1c1.4-0.8,3-1.3,4.5-1.4h0.8l0,0c3.8,0,7.6,1.9,9.7,5.5 C482.4,65.3,482.8,68.3,482,71.1z",
            "fill": "#DDDDDD",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Treasure should render when inactive and pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Treasure
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
    hasDismiss={false}
    hasHiddenIcons={false}
    isActive={false}
    isPressed={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Rect
          fill="#EEEEEE"
          height="8"
          rx={0}
          ry={0}
          transform="matrix(0.8651 -0.5015 0.5015 0.8651 22.0488 214.7955)"
          width="3"
          x="408.9"
          y="62.4"
        />,
        <Rect
          fill="#EEEEEE"
          height="7.5"
          rx={0}
          ry={0}
          transform="matrix(0.3987 -0.9171 0.9171 0.3987 173.3256 413.3168)"
          width="3"
          x="400.3"
          y="70.7"
        />,
        <Rect
          fill="#EEEEEE"
          height="3"
          rx={0}
          ry={0}
          width="8"
          x="394.6"
          y="85.2"
        />,
        <Path
          d="M483.4,61.3c-1.9-3.3-4.9-5.6-8.5-6.6c-1.7-0.5-3.5-0.6-5.3-0.4H431c-2.4,0.1-4.6,0.8-6.6,1.9l-7.8,4.6l11.9,20.6h-2.3 h-16.5v37h39.5h2h21V84l6.2-3.5C485,76.5,487.3,67.9,483.4,61.3z M426,58.8c1.5-0.9,3.3-1.4,5.1-1.5h31.2l-4.2,2.5h-33.8L426,58.8z M429.1,84.4h5v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V84.4z M412.6,115.4v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5 v-2.5h12v31H412.6z M449.1,81.4h-12h-5l-10.8-18.6h36.3l10.9,18.6h-17.4H449.1z M469.1,115.4h-17v-31h17V115.4z M482,71.1 c-0.8,2.8-2.6,5.2-5.2,6.7l-5.2,3l-11-19l5.3-3.1c1.4-0.8,3-1.3,4.5-1.4h0.8l0,0c3.8,0,7.6,1.9,9.7,5.5 C482.4,65.3,482.8,68.3,482,71.1z"
          fill="#EEEEEE"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#EEEEEE",
          "height": "8",
          "rx": 0,
          "ry": 0,
          "transform": "matrix(0.8651 -0.5015 0.5015 0.8651 22.0488 214.7955)",
          "width": "3",
          "x": "408.9",
          "y": "62.4",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#EEEEEE",
          "height": "7.5",
          "rx": 0,
          "ry": 0,
          "transform": "matrix(0.3987 -0.9171 0.9171 0.3987 173.3256 413.3168)",
          "width": "3",
          "x": "400.3",
          "y": "70.7",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#EEEEEE",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": "8",
          "x": "394.6",
          "y": "85.2",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M483.4,61.3c-1.9-3.3-4.9-5.6-8.5-6.6c-1.7-0.5-3.5-0.6-5.3-0.4H431c-2.4,0.1-4.6,0.8-6.6,1.9l-7.8,4.6l11.9,20.6h-2.3 h-16.5v37h39.5h2h21V84l6.2-3.5C485,76.5,487.3,67.9,483.4,61.3z M426,58.8c1.5-0.9,3.3-1.4,5.1-1.5h31.2l-4.2,2.5h-33.8L426,58.8z M429.1,84.4h5v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V84.4z M412.6,115.4v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5 v-2.5h12v31H412.6z M449.1,81.4h-12h-5l-10.8-18.6h36.3l10.9,18.6h-17.4H449.1z M469.1,115.4h-17v-31h17V115.4z M482,71.1 c-0.8,2.8-2.6,5.2-5.2,6.7l-5.2,3l-11-19l5.3-3.1c1.4-0.8,3-1.3,4.5-1.4h0.8l0,0c3.8,0,7.6,1.9,9.7,5.5 C482.4,65.3,482.8,68.3,482,71.1z",
          "fill": "#EEEEEE",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Rect
            fill="#EEEEEE"
            height="8"
            rx={0}
            ry={0}
            transform="matrix(0.8651 -0.5015 0.5015 0.8651 22.0488 214.7955)"
            width="3"
            x="408.9"
            y="62.4"
          />,
          <Rect
            fill="#EEEEEE"
            height="7.5"
            rx={0}
            ry={0}
            transform="matrix(0.3987 -0.9171 0.9171 0.3987 173.3256 413.3168)"
            width="3"
            x="400.3"
            y="70.7"
          />,
          <Rect
            fill="#EEEEEE"
            height="3"
            rx={0}
            ry={0}
            width="8"
            x="394.6"
            y="85.2"
          />,
          <Path
            d="M483.4,61.3c-1.9-3.3-4.9-5.6-8.5-6.6c-1.7-0.5-3.5-0.6-5.3-0.4H431c-2.4,0.1-4.6,0.8-6.6,1.9l-7.8,4.6l11.9,20.6h-2.3 h-16.5v37h39.5h2h21V84l6.2-3.5C485,76.5,487.3,67.9,483.4,61.3z M426,58.8c1.5-0.9,3.3-1.4,5.1-1.5h31.2l-4.2,2.5h-33.8L426,58.8z M429.1,84.4h5v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V84.4z M412.6,115.4v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5 v-2.5h12v31H412.6z M449.1,81.4h-12h-5l-10.8-18.6h36.3l10.9,18.6h-17.4H449.1z M469.1,115.4h-17v-31h17V115.4z M482,71.1 c-0.8,2.8-2.6,5.2-5.2,6.7l-5.2,3l-11-19l5.3-3.1c1.4-0.8,3-1.3,4.5-1.4h0.8l0,0c3.8,0,7.6,1.9,9.7,5.5 C482.4,65.3,482.8,68.3,482,71.1z"
            fill="#EEEEEE"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#EEEEEE",
            "height": "8",
            "rx": 0,
            "ry": 0,
            "transform": "matrix(0.8651 -0.5015 0.5015 0.8651 22.0488 214.7955)",
            "width": "3",
            "x": "408.9",
            "y": "62.4",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#EEEEEE",
            "height": "7.5",
            "rx": 0,
            "ry": 0,
            "transform": "matrix(0.3987 -0.9171 0.9171 0.3987 173.3256 413.3168)",
            "width": "3",
            "x": "400.3",
            "y": "70.7",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#EEEEEE",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": "8",
            "x": "394.6",
            "y": "85.2",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M483.4,61.3c-1.9-3.3-4.9-5.6-8.5-6.6c-1.7-0.5-3.5-0.6-5.3-0.4H431c-2.4,0.1-4.6,0.8-6.6,1.9l-7.8,4.6l11.9,20.6h-2.3 h-16.5v37h39.5h2h21V84l6.2-3.5C485,76.5,487.3,67.9,483.4,61.3z M426,58.8c1.5-0.9,3.3-1.4,5.1-1.5h31.2l-4.2,2.5h-33.8L426,58.8z M429.1,84.4h5v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V84.4z M412.6,115.4v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5 v-2.5h12v31H412.6z M449.1,81.4h-12h-5l-10.8-18.6h36.3l10.9,18.6h-17.4H449.1z M469.1,115.4h-17v-31h17V115.4z M482,71.1 c-0.8,2.8-2.6,5.2-5.2,6.7l-5.2,3l-11-19l5.3-3.1c1.4-0.8,3-1.3,4.5-1.4h0.8l0,0c3.8,0,7.6,1.9,9.7,5.5 C482.4,65.3,482.8,68.3,482,71.1z",
            "fill": "#EEEEEE",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
